--- a/src/styles/media_queries.scss
+++ b/src/styles/media_queries.scss
@@ -20,7 +20,7 @@
   }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 576px) {
   body {
     font-size: 12px;
   }
